[master] :( not working tests. Edited exercise 1

--- a/assets/scss/_helper-classes.scss
+++ b/assets/scss/_helper-classes.scss
@@ -8,3 +8,11 @@
 .prel {
     position: relative;
 }
+
+// moar colors
+.success {
+    background-color: #00C853;
+    &--text {
+        color: #00C853;
+    }
+}
