--- a/assets/scss/_helper-classes.scss
+++ b/assets/scss/_helper-classes.scss
@@ -14,6 +14,11 @@
     vertical-align: middle;
 }
 
+// flex
+.h100p {
+    height: 100%;
+}
+
 // moar colors
 $MOAR_COLORS: (
     success: #00C853,
