[edd] added first part of the 4th exercise

--- a/assets/scss/_helper-classes.scss
+++ b/assets/scss/_helper-classes.scss
@@ -43,6 +43,12 @@ $MOAR_COLORS: (
     font-weight: bold;
 }
 
+// text
+.break {
+    word-break: break-all;
+}
+
+
 // cursors
 .c-p {
     cursor: pointer;
